--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ add_subdirectory(googletest-master)
 include_directories(googletest-master/googletest/include)
 include_directories(googletest-master/googlemock/include)
 
-set(SOURCE_FILES FamilyTree.cpp FamilyTree.hpp FamilyMemberRoot.cpp FamilyMemberRoot.hpp FamilyMember.cpp FamilyMember.hpp ut/FamilyTreeTest.cpp)
-set(TEST_FILES src/ut/main.cpp )
+set(SOURCE_FILES src/FamilyTree.cpp src/FamilyTree.hpp src/FamilyMemberRoot.cpp src/FamilyMemberRoot.hpp
+        src/FamilyMember.cpp src/FamilyMember.hpp)
+set(TEST_FILES ut/main.cpp ut/FamilyTreeTest.cpp ut/main.cpp)
 
 add_executable(${PROJECT_NAME} src/main.cpp ${SOURCE_FILES})
 add_executable(ut-run ${TEST_FILES} ${SOURCE_FILES})
